# spoLab15

./: .gitignore  CMakeLists.txt  build.sh  data  main  schema.xsd
client/: client.c  client.h  client_main.c
datafile/: attribute.c  attribute.h  blocks.h  cells.h  datafile.c  datafile.h  datafile_main.c  label.c  label.h  node.c  node.h  relation.c  relation.h
debug/: datafile_main.c
server/: server.c  server.h  server_main.c
server/datafile/: blocks.h  cells.h  const.h  datafile_main.c  packs.h
utils/: const.h  linked_list.c  linked_list.h  message.c  message.h  my_alloc.c  my_alloc.h
